test/attr/attr_cdecl_official_rejected.code
// RUN: %target-typecheck-verify-language
// RUN: %target-language-frontend -typecheck %s \
// RUN:   -enable-experimental-feature CDecl

// REQUIRES: language_feature_CDecl

@cdecl("cdecl_foo") fn foo() { } // expected-error {{'@cdecl' requires '-enable-experimental-feature CDecl'}}

var computed: Int {
  @cdecl("get_computed") get { return 0 } // expected-error {{'@cdecl' requires '-enable-experimental-feature CDecl'}}
  @cdecl("set_computed") set { } // expected-error {{'@cdecl' requires '-enable-experimental-feature CDecl'}}
}
